Project

General

Profile

Actions

Bug #13982

closed

Memory leak in Zlib.gunzip

Bug #13982: Memory leak in Zlib.gunzip

Added by rhenium (Kazuki Yamaguchi) over 8 years ago. Updated about 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.0dev (2017-10-06 master 60128) [x86_64-linux]
[ruby-core:83162]

Description

Zlib.gunzip which was added in Ruby 2.4 seems to leak memory every time it is called.

$ ruby -rzlib -e'END{puts File.readlines("/proc/self/status").grep(/RSS/)}' -e'd=Zlib.gzip("data"); 100_000.times{Zlib.gunzip(d)}'
VmRSS:	  829496 kB

Updated by nobu (Nobuyoshi Nakada) over 8 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset trunk|r60130.


zlib.c: memory leak in gunzip

Updated by nagachika (Tomoyuki Chikanaga) about 8 years ago Actions #2 [ruby-core:85355]

  • Backport changed from 2.3: DONTNEED, 2.4: REQUIRED to 2.3: DONTNEED, 2.4: DONE

ruby_2_4 r62172 merged revision(s) 60042,60130,60131.

Actions

Also available in: PDF Atom